<resources>
    <string name="app_name">Tienda Virtual</string>

    <string name="open_drawer">Tienda Virtual</string>
    <string name="close_drawner">Tienda Virtual</string>

    <string name="tipoVendedor">Vendedor</string>
    <string name="tipoCliente">Cliente</string>

    <!--NavigationDrawer Vendedor-->
    <string name="op_inicio_v">Inicio</string>
    <string name="op_mi_tienda_v">Mi tienda</string>
    <string name="op_categorias_v">Categorías</string>
    <string name="op_resenia_v">Reseñas</string>
    <string name="op_geo_v">Geolocalización</string>
    <string name="op_cerrar_sesion_v">Cerrar sesión</string>

    <!--NavigationDrawer Cliente-->
    <string name="op_inicio_c">Inicio</string>
    <string name="op_mi_perfil_c">Mi Perfil</string>
    <string name="op_cerrar_sesion_c">Cerrar sesión</string>

    <!--Bottom Navigation Bar Vendedor-->
    <string name="op_mis_productos_v">Mis productos</string>
    <string name="op_mis_ordenes_v">Órdenes</string>

    <!--Bottom Navigation Bar Cliente-->
    <string name="op_tienda_c">Tienda</string>
    <string name="op_mis_ordenes_c">Mis órdenes</string>

    <!--Registro de vendedor-->
    <string name="txtRegistroV">Registro de vendedor</string>
    <string name="etNombresV">Nombres completos</string>
    <string name="etEmail">Email</string>
    <string name="etPassword">Password</string>
    <string name="etCPassword">Confirmar password</string>
    <string name="btnRegistrarV">Registrarme</string>

    <!--Registro de cliente-->
    <string name="txtRegistroC">Registro de cliente</string>
    <string name="etNombresC">Nombres completos</string>
    <string name="btnRegistrarC">Registrarme</string>

    <!--Login de vendedor-->
    <string name="txtLoginV">Login de vendedor</string>
    <string name="btnLoginV">Ingresar</string>
    <string name="txtNoCuenta">¿No tienes una cuenta?</string>
    <string name="tvRegistrarV">Registrarme</string>

    <!--Login de cliente-->
    <string name="txtLoginC">Login de cliente</string>
    <string name="btnLoginC">Ingresar</string>
    <string name="tvRegistrarC">Registrarme</string>

    <!--Productos-->
    <string name="txtAgregarProducto">Agregar Producto</string>
    <string name="etNombresP">Nombre del producto</string>
    <string name="etDescripcionP">Descripción</string>
    <string name="categoria">Categoría</string>
    <string name="etPrecioP">Precio</string>
    <string name="txtDescuento">Descuento</string>
    <string name="etPrecionConDescuentoP">Precio con descuento</string>
    <string name="etNotaDescuentoP">Ejm: 10% Desc.</string>
    <string name="btnAgregarProducto">Agregar producto</string>

    <!--Geolocalizacion-->
    <string name="btnLocation">Obtener Localización</string>
    <string name="txtLocalizacion">Geolocalización</string>

    <!--Agregar categorias-->
    <string name="etCategoria">Ingrese categoria</string>
    <string name="btnAgregarCat">Agregar categoría</string>

    <!--Item categoria vendedor-->
    <string name="item_nombreCat_v">Nombre de categoría</string>

    <!--Item categoria cliente-->
    <string name="item_nombreCat_c">Nombre de categoría</string>
    <string name="item_ver_productos">Ver productos</string>

    <!--Item producto cliente-->
    <string name="item_agregar_carrito_p">Añadir al carrito</string>

    <!--Registro de cliente-->
    <string name="item_nombre_p">Nombre del producto</string>
    <string name="item_nota_p">50% OFF</string>
    <string name="item_precio_p">00</string>
    <string name="item_precio_p_desc">00</string>

    <!--Registro con numero telefonico-->
    <string name="txtLoginTelC">Login con teléfono</string>
    <string name="etTelefonoC">Teléfono</string>
    <string name="btnEnviarCodigo">Enviar código</string>
    <string name="etCodVer">Código</string>
    <string name="btnVerificarCod">Verificar Código</string>
    <string name="tvReenviarCod">¿No llegó el código?. <b>Reenviar</b></string>

    <string name="txt_bienvenida">Bienvenido(a)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>