<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardUseCompatPadding="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="7dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--Nota del descuento-->
            <TextView
                android:id="@+id/item_nota_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/fondo_verde"
                android:padding="5dp"
                android:text="@string/item_nota_p"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/ib_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:padding="7dp"
                android:src="@drawable/ic_no_favorito" />

        </RelativeLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imagenP"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/item_imagen_producto" />

        <!--Nombre del producto-->
        <TextView
            android:id="@+id/item_nombre_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:maxLines="1"
            android:text="@string/item_nombre_p"
            android:textSize="17sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <!--Precio con descuento-->
            <TextView
                android:id="@+id/item_precio_p_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/item_precio_p_desc"
                android:textColor="@color/azul_marino_oscuro"
                android:textSize="16sp"
                android:visibility="gone" />

            <!--Precio del producto-->
            <TextView
                android:id="@+id/item_precio_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/item_precio_p_desc"
                android:text="@string/item_precio_p"
                android:textSize="16sp" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/item_agregar_carrito_p"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/item_agregar_carrito_p"
            android:textAllCaps="true"
            app:cornerRadius="8dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</com.google.android.material.card.MaterialCardView>